--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-echo "# Dependencies
+# Dependencies
 node_modules/
 
 # Environment variables
@@ -26,4 +26,4 @@ build/
 
 # Misc
 .DS_Store
-Thumbs.db" > .gitignore
+Thumbs.db
