--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest --detectOpenHandles --forceExit",
+    "build": "echo 'Installing production dependencies...' && npm ci --only=production",
+    "postbuild": "echo 'Build completed successfully - Ready for AWS Amplify'",
+    "prod": "NODE_ENV=production node src/index.js",
+    "amplify:start": "NODE_ENV=production PORT=3000 node src/index.js",
+    "health-check": "curl -f http://localhost:3000/health || exit 1",
+    "validate-deployment": "node validate-deployment.js",
+    "pre-deploy": "npm run validate-deployment"
   },
   "keywords": [
     "api",
     "payments",
-    "hexagonal-architecture"
+    "hexagonal-architecture",
+    "wompi",
+    "aws-amplify"
   ],
   "author": "",
   "license": "ISC",
@@ -29,5 +38,9 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
