--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest --detectOpenHandles --forceExit",
-    "build": "echo 'Installing production dependencies...' && npm ci --only=production",
-    "postbuild": "echo 'Build completed successfully - Ready for AWS Amplify'",
+    "build": "npm ci --only=production",
+    "postbuild": "echo Build completed successfully",
     "prod": "NODE_ENV=production node src/index.js",
     "amplify:start": "NODE_ENV=production PORT=3000 node src/index.js",
     "health-check": "curl -f http://localhost:3000/health || exit 1",
