Configuración completa para Render con PostgreSQL - Base de datos configurada - SSL y DATABASE_URL soportados - render.yaml optimizado para deployment

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "payments",
     "hexagonal-architecture",
     "wompi",
-    "aws-amplify"
+    "render",
+    "backend"
   ],
   "author": "",
   "license": "ISC",
