--- a/render.yaml
+++ b/render.yaml
@@ -13,13 +13,14 @@ services:
         value: 10000
       - key: HOST
         value: 0.0.0.0
-      # Base de datos - Render PostgreSQL
+      # Base de datos - URL interna de Render (automática)
       - key: DATABASE_URL
         fromDatabase:
           name: pasarela_db
           property: connectionString
+      # Variables adicionales por si se necesitan individualmente
       - key: DB_HOST
-        value: dpg-d1a3ebqdbo4c73chat0-a.oregon-postgres.render.com
+        value: dpg-d1a3ebqdbo4c73c3hat0-a.oregon-postgres.render.com
       - key: DB_PORT
         value: 5432
       - key: DB_NAME
@@ -27,7 +28,7 @@ services:
       - key: DB_USER
         value: pasarela_db_user
       - key: DB_PASSWORD
-        sync: false
+        value: GSR9FS8hyclcsCFxjeMkhEkD4LXIpOzc
       # Wompi configuración para producción
       - key: WOMPI_API_URL
         value: https://api.wompi.co/v1
