--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
